--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "viem": "^2.23.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
