--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
     "ethers": "^6.13.5",
     "next": "15.2.0",
     "react": "^19.0.0",
